# caracol_tobias

./: .envExample  .gitignore  Cargo.toml  README.org  notes.org  package-lock.json  start.sh
files/: movies.csv
files/movies/: 640879071089131533.csv  640879071089131533.json  640879071089131533_seen.json  825487739930542080.csv  825487739930542080.json  825487739930542080_seen.json
files/quotes/: 640879071089131533.json  825487739930542080.json  846006094009597983.json
src/: commands.rs  constantes.rs  events.rs  macros.rs  main.rs
src/commands/: admins.rs  emoji.rs  examples.rs  general.rs  mod.rs  movies.rs  owners.rs  quotes.rs  setup_bot.rs  slash.rs  spicy_memes.rs  university.rs
src/modules/: events.rs  function_aux.rs  mod.rs  movies_aux.rs  pagination.rs  quotes_struct.rs  university.rs
