[package]
name = "caracol_tobias"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kankyo = "0.3"
tokio = { version = "1", features = ["full"] }
serenity = "0.10.9"
serenity_utils = "0.6.1"
tracing = "0.1.25"
tracing-subscriber = "0.2.0"
#reqwest = "0.11.3"
#chrono = "0.4.19"
serde = "1.0.125"
serde_json = "1.0.64"
#serde-aux = "2.2.0"
quick-error = "2.0.0"
#md5 = "0.7.0"
rand = "0.7.3"
omdb = "0.3.2"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [ "runtime-tokio-rustls", "macros", "postgres"]
